err/django-wsgiserver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_wsgiserver'...
Listing './lib/python3.5/site-packages/django_wsgiserver/management'...
Listing './lib/python3.5/site-packages/django_wsgiserver/management/commands'...
Compiling './lib/python3.5/site-packages/django_wsgiserver/management/commands/runwsgiserver.py'...
***   File "./lib/python3.5/site-packages/django_wsgiserver/management/commands/runwsgiserver.py", line 135
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_wsgiserver/wsgiserver'...
Compiling './lib/python3.5/site-packages/django_wsgiserver/wsgiserver/__init__.py'...
***   File "./lib/python3.5/site-packages/django_wsgiserver/wsgiserver/__init__.py", line 170
    print "Illegal header line" # add loging
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_wsgiserver/wsgiserver/ssl_builtin.py'...
***   File "./lib/python3.5/site-packages/django_wsgiserver/wsgiserver/ssl_builtin.py", line 40
    except ssl.SSLError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_wsgiserver/wsgiserver/ssl_pyopenssl.py'...
***   File "./lib/python3.5/site-packages/django_wsgiserver/wsgiserver/ssl_pyopenssl.py", line 71
    except SSL.SysCallError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_wsgiserver-0.6.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
